--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "src/pocketmine/lang/locale"]
+	path = src/pocketmine/lang/locale
+	url = https://github.com/ApexieDevelopment/OpenTouch-Locale.git
 [submodule "tests/preprocessor"]
 	path = build/preprocessor
 	url = https://github.com/pmmp/preprocessor.git
